--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "prettier": "^3.4.2"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mysql2": "^3.12.0",
